--- a/RickButton/RickButton.csproj
+++ b/RickButton/RickButton.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1475A28-4027-4AF0-BE4D-78C671B29D85}</ProjectGuid>
+    <ProjectGuid>{F89C5651-A36D-4438-A803-D2F2DCD03842}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Button</RootNamespace>
-    <AssemblyName>Button</AssemblyName>
+    <RootNamespace>RickButton</RootNamespace>
+    <AssemblyName>RickButton</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -93,6 +93,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="garage.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="portal1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="rick1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="rick2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
