--- a/RickButton/RickButton.csproj
+++ b/RickButton/RickButton.csproj
@@ -106,5 +106,11 @@
   <ItemGroup>
     <Resource Include="rick2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="meeseeks.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="meeseeks2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
