--- a/RickButton/RickButton.csproj
+++ b/RickButton/RickButton.csproj
@@ -112,5 +112,8 @@
   <ItemGroup>
     <Resource Include="meeseeks2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="portalbutton.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
