--- a/RickButton/RickButton.csproj
+++ b/RickButton/RickButton.csproj
@@ -67,8 +67,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="meeseeks.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="pickleRick.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="meeseeks.xaml.cs">
+      <DependentUpon>meeseeks.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="pickleRick.xaml.cs">
+      <DependentUpon>pickleRick.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -114,6 +128,27 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="portalbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="livingroom.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="rickInPortal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="rickWaving.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="rick_flying_in.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="meeseeksBox.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="mrMeeseeks.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="test.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
